--- a/style.css
+++ b/style.css
@@ -2,88 +2,117 @@
     margin: 0;
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
-body{
+
+main{
     display: flex;
     justify-content: center;
 }
 
 .main{
-    background-color: rgb(2, 32, 43);
-    border: 2px solid rgb(17, 129, 170);
-    width: 80vw;
-    height: 80vh;
-    box-shadow: 0px 0px 15px rgb(36, 36, 36);
-
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+    border: 2px solid black;
+    width: 300px;
+    height: 400px;
+    background-color: antiquewhite;
+    box-shadow: 0px 0px 15px rgb(76, 67, 43);
 }
 
-.topBar{
-    border: 2px solid rgb(82, 35, 2);
-    background-color: rgb(50, 1, 1);
-    width: 99%;
+.addTaskBar{
+    /* border: 2px solid black; */
     height: 100px;
+    box-shadow: 0px 0px 5px;
+    background-color: bisque;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-}
-
-.topBar h2{
-    position: absolute;
-    top:0;
-    color: antiquewhite;
-    text-shadow: 0px 0px 15px ;
-}
-
-.form{
-    display: flex;
+    display:flex ;
     justify-content: center;
     align-items: center;
     gap: 20px;
 
+    position: relative;
 }
 
-#taskInput{
-    border-radius: 5px;
-    outline: none;
-    border: 2px solid white;
-    box-shadow: 0px 0px 5px rgb(2, 43, 105);
-    padding: 2px;
-    color: antiquewhite;
-    background-color: rgb(1, 25, 39);
-}
-
-.taskAdd{
-    border: 2px solid white;
-    padding: 2px 5px;
-    border-radius: 5px;
-    color: antiquewhite;
-    background-color: rgb(6, 25, 56);
-    font-weight: bold;
-}
-
-
-.listBox{
-    color: antiquewhite;
-
-    border: 2px solid white;
-
-    width: 70%;
-    height: 60%;
+.addTaskBar h2{
     position: absolute;
-    top: 110px;
+    top: 0;
+}
 
-    background-color: rgb(32, 2, 11);
-
+.tasks{
+    /* border: 2px solid black; */
     display: flex;
     justify-content: center;
-
     overflow: auto;
 
+    height: 350px;
+}
+
+.tasksList{
+    /* border: 2px solid black; */
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    height: 280px;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     
+}
+
+.tasksList li{
+    /* border: 2px solid black; */
+    height: 20px;
+    background-color: rgb(1, 98, 125);
+    justify-content: center;
+    align-items:center;
+    /* gap: 50px; */
+    color: rgb(244, 239, 212);
+    
+    width: 200px;
+
+    position: relative;
+    padding: 10px;
+    margin: 5px;
+    list-style-position: inside;
+
+}
+.deleteButton{
+
+    position: absolute;
+    right: 10px;
+    padding: 1px;
+    border: none;
+    height: 20px;
+    width: 40px;
+    border-radius: 5px;
+    background-color: rgb(118, 75, 10);
+    color: antiquewhite;
+    cursor: pointer;
+
+
+}
+
+/* Apply to the entire document */
+body {
+    scrollbar-width: thin; /* For Firefox */
+    scrollbar-color: #975a10 #533011; /* For Firefox */
+}
+
+/* WebKit Browsers (Chrome, Edge, Safari) */
+::-webkit-scrollbar {
+    width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background: #47320b; /* Background of the scroll bar track */
+    border-radius: 10px; /* Optional: Rounded corners */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #a28b3e; /* Scrollbar color */
+    border-radius: 10px; /* Rounded corners for the thumb */
+    border: 2px solid #ac8634; /* Space around the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #e0cb70; /* Change color on hover */
 }
